<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="permission_request">Permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="zero">0</string>
    <string name="gps">GPS:</string>
    <string name="not_active">Not Active</string>
    <string name="textEvent">Event:</string>
    <string name="mm_dd">mm-dd</string>
    <string name="_00_00">00:00</string>
    <string name="play_stop">play_stop</string>
    <string name="loginfo">logInfo</string>
    <string name="underscore">_ _</string>
    <string name="km">Km</string>
    <string name="compassImage">compassImage</string>
    <string name="directionTriangle">directionTriangle</string>
    <string name="appwidget_text"> </string>
</resources>