<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <!--draw box around texture view -->
    <TextView
        android:layout_width="182dp"
        android:layout_height="102dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/backborder" />

    <com.urrecliner.blackrecords.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <!--GPS info-->
    <TextView
        android:id="@+id/textGPS"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_alignParentStart="true"
        android:text="@string/gps"
        android:textColor="#cccccc"
        android:textSize="@dimen/info_size" />

    <TextView
        android:id="@+id/textGPSValue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/textEvent"
        android:layout_marginTop="12dp"
        android:text="@string/not_active"
        android:textColor="#cccccc"
        android:textSize="@dimen/info_size" />

    <!--Event Record counts -->
    <TextView
        android:id="@+id/textEvent"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_below="@id/textGPS"
        android:text="@string/textEvent"
        android:textColor="#cccccc"
        android:textSize="@dimen/info_size" />
    <TextView
        android:id="@+id/textCountEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textGPS"
        android:layout_toEndOf="@id/textEvent"
        android:text="@string/zero"
        android:layout_marginStart="0dp"
        android:textColor="#cccccc"
        android:textSize="@dimen/info_size" />

    <!--Log Info in multi lines-->
    <TextView
        android:id="@+id/textLogInfo"
        android:layout_width="420dp"
        android:layout_height="110dp"
        android:layout_below="@id/textEvent"
        android:layout_marginStart="16dp"
        android:text="@string/loginfo"
        android:textColor="#cccc"
        android:textSize="@dimen/log_size" />


    <!--Date and Time-->

    <TextView
        android:id="@+id/textDate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:layout_toLeftOf="@id/btnRecord"
        android:text="@string/mm_dd"
        android:textColor="#eeeeee"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/textTime"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/textDate"
        android:layout_marginTop="0dp"
        android:layout_toLeftOf="@id/btnRecord"
        android:gravity="center"
        android:text="@string/_00_00"
        android:textColor="#eeeeee"
        android:textSize="36sp" />

    <!--  Battery  -->

    <FrameLayout
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="0dp">

        <ImageView
            android:id="@+id/imgBattery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/textBattery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="BB"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="24sp" />

    </FrameLayout>


    <!--Record start button and count-->
    <ImageButton
        android:id="@+id/btnRecord"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@+id/texture"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/play_stop"
        android:src="@mipmap/icon_record_inactive" />

    <TextView
        android:id="@+id/textCountRecords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/btnRecord"
        android:text="@string/zero"
        android:textColor="#eeeeee"
        android:textSize="32sp" />

    <!--Speed in Km-->
    <TextView
        android:id="@+id/textSpeed"
        android:layout_width="200dp"
        android:layout_height="110dp"
        android:layout_below="@id/textLogInfo"
        android:layout_alignParentStart="true"
        android:layout_gravity="end"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:text="@string/underscore"
        android:textAlignment="center"
        android:textColor="#eeeeee"
        android:textSize="60sp" />
    <TextView
        android:id="@+id/textKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textSpeed"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="80dp"
        android:layout_toEndOf="@id/textSpeed"
        android:text="@string/km"
        android:textColor="#eeeeee"
        android:textSize="36sp" />

    <!--Event button and count-->

    <ImageButton
        android:id="@+id/btnEvent"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@mipmap/icon_event_not_allowed"
        android:contentDescription="@string/textEvent" />
    <TextView
        android:id="@+id/activeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#0eed19"
        android:textSize="24sp"
        android:layout_above="@id/btnEvent"
        android:layout_centerHorizontal="true" />

    <!--Compass-->

    <FrameLayout
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="444dp"
        android:layout_marginTop="18dp"
        android:layout_below="@id/textTime" >

        <ImageView
            android:id="@+id/imageViewCompass"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/compassImage"
            android:src="@mipmap/compass_news" />

        <ImageView
            android:id="@+id/imageViewArrow"
            android:layout_gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/compass_arrow"
            android:contentDescription="@string/directionTriangle" />

    </FrameLayout>


    <!--Exit button-->
    <ImageButton
        android:id="@+id/btnExit"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="74dp"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/km"
        android:src="@mipmap/icon_exit_app" />

</RelativeLayout>
